- Made the captain job optional (i.e. if no-one has captain in their preferences, no-one gets forced to play as one).
- Improvements to the Korean localization.

Fixes:
- Fixed clients' characters getting reset in the multiplayer campaign if they're spectating at the end of the round.
- Fixed crashing when an event set fails to load any of its sub events. Caused certain mods to crash the game at 42% in the loading screen.
- Fixed crashing on startup when using mods that remove the small icons from job prefabs.
- Fixed bots being unable to find their way to the submarine if the switch to the "find safety" state outside the sub.
- Fixed crashing when a monster was just about to turn to a husk when the round ends.
- Fixed opened item disappearing when switching to the test mode from the sub editor.
- Fixed Artie Dolittle's ID card not working in the player's sub after he's hired.
- Fixed category labels (sufficient skills to fabricate, requires recipe, etc) disappearing from the fabricator's item list when searching.
- Fixed prisoner's uniform using a wrong texture file.
- Fixed inability to edit pulse laser's power consumption in the sub editor.
- Fixed an exploit in Pressure Stabilizer crafting recipe.
- Fixed an exploit in Fixfoam Grenade deconstruction recipe.
- Fixed crashing when selecting a gene splicer and hovering over its inventory slot in the sub editor.
- Fixed bots being unable to use hardened and dementonite tools.
- Fixed a typo in Tinkering cooldown reduction description.
- Fixed inactive reactors electrocuting low-skill characters when rewired.
- Fixed ignore orders carrying over when switching subs, causing them to target random items in the new sub.
- Fixed dementonite knives being sold in stores.
- Fixed contained items' impact sounds being played when the item they're inside hits the floor.
- Fixed True Potential instant kills not properly giving kill credit (achievements, other talents).