@@ -74,7 +74,7 @@ namespace Barotrauma.Items.Components
             {
                 Matrix bodyTransform = Matrix.CreateRotationZ(item.body == null ? MathHelper.ToRadians(item.Rotation) : item.body.Rotation);
                 Vector2 flippedPos = barrelPos;
-                if (item.body.Dir < 0.0f) { flippedPos.X = -flippedPos.X; }
+                if (item.body != null && item.body.Dir < 0.0f) { flippedPos.X = -flippedPos.X; }
                 return Vector2.Transform(flippedPos, bodyTransform) * item.Scale;
             }
         }
